<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#fcfcfc">


    <TextView
    android:id="@+id/sell_TextName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/daddress"
    android:textSize="25dp"
    android:textColor="@color/black"
    android:textColorHint="@color/black"/>


    <Button
        android:id="@+id/ButtonUpdateCrop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-medium"
        android:text="@string/fcall"
        android:textSize="20dp" />

    <Button
        android:id="@+id/buttonDeleteCrop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-medium"
        android:text="@string/fbrought"
        android:textSize="20dp" />

</LinearLayout>