<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThanksActivity"
    android:background="#fcfcfc">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:background="@color/white">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="casual"
            android:text="@string/slogan"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp">


            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:fontFamily="casual"
                android:text="@string/thanks"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp" />

        </RelativeLayout>

        <Button
            android:id="@+id/share_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:textSize="17dp"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif-medium"
            android:text="@string/share"
            android:textColor="@color/white" />


        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/share_btn"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:textSize="20dp"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif-medium"
            android:text="@string/back"
            android:textColor="@color/white" />




    </RelativeLayout>

</LinearLayout>